# nodes

./: CMakeLists.txt  README.md  notes.md
assets/: example.conf
cmake/: Options.cmake
include/: enviroment.hxx  gui.hxx  lexer.hxx  node.hxx  parser.hxx  scene.hxx  tokenizer.hxx  uuid.hxx
include/widget/: context_menu.hxx  label.hxx
src/: enviroment.cxx  gui.cxx  lexer.cxx  main.cxx  node.cxx  parser.cxx  scene.cxx  tokenizer.cxx  uuid.cxx
src/widget/: context_menu.cxx  label.cxx
